@@ -3,17 +3,16 @@ package com.network.network.post.service;
 import com.network.network.post.Post;
 import com.network.network.post.exception.PostNotFoundException;
 import com.network.network.post.resource.PostRepository;
+import com.network.network.recommendation.JobType;
+import com.network.network.recommendation.Recommendation;
+import com.network.network.recommendation.resource.RecommendationRepository;
 import com.network.network.user.User;
 import com.network.network.user.info.Info;
 import com.network.network.user.service.UserService;
 import jakarta.annotation.Resource;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 public class PostService {
@@ -26,19 +25,58 @@ public class PostService {
     @Value("${post.page.size}")
     private int pageSize;
 
+    @Resource
+    private RecommendationRepository recommendationRepository;
+
+    public List<Post> getAllPosts() {
+        return postRepository.findAll()
+                             .stream().filter(Post::isPost)
+                             .sorted(Comparator.comparing(Post::getCreated))
+                             .toList();
+    }
+
+    public List<Post> getAllJobOffers() {
+        return postRepository.findAll().stream().filter(Post::isJobOffer).toList();
+    }
+
     public List<Post> getAllPostsFor(User user, int page) throws IllegalArgumentException {
         if (page <= 0) {
             throw new IllegalArgumentException("Page should be positive");
         }
 
-        List<Post> posts = postRepository.findAll().stream().filter(post ->
-                post.isPost() &&
-                post.getUser() != user &&
-                (post.getUser().isConnected(user) ||
-                user.getConnected().stream().anyMatch(connection -> connection.isConnected(post.getUser()))))
-           .collect(Collectors.toList());
+        List<Post> recPosts =
+                recommendationRepository.findAllByUserAndType(user, JobType.POST)
+                                        .stream()
+                                        .sorted(Comparator.<Recommendation, Boolean>
+                                                 comparing(rec -> !rec.getPost().getUser().isConnected(user)) // ! makes connected go first
+                                                .thenComparingDouble(Recommendation::getRating)
+                                        )
+                                        .map(Recommendation::getPost)
+                                        .toList();
+        if (recPosts.isEmpty()) {
+            List<Post> connPosts =
+                    new ArrayList<>(postRepository.findAll().stream().filter(post ->
+                        post.isPost() && post.getUser() != user && (
+                                post.getUser().isConnected(user) ||
+                                user.getConnected().stream().anyMatch(connection ->
+                                        connection.isConnected(post.getUser()))))
+                            .sorted(Comparator.comparing(Post::getCreated).reversed())
+                            .toList());
 
-        return posts.subList((page - 1) * pageSize, Math.min(page * pageSize, posts.size()));
+            // get maxPage latest posts (used for new users)
+            if (connPosts.isEmpty()) {
+                if (page == 1) {
+                    List<Post> posts = getAllPosts();
+                    return posts.subList(0, Math.min(pageSize, posts.size()));
+                } else {
+                    throw new IllegalArgumentException("Should follow users or wait for recommendations");
+                }
+            }
+
+            return connPosts.subList((page - 1) * pageSize, Math.min(page * pageSize, connPosts.size()));
+        }
+
+        return recPosts.subList((page - 1) * pageSize, Math.min(page * pageSize, recPosts.size()));
     }
 
     public Post getPost(int id) {
